--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -1,1 +1,5 @@
-foo
+- unless user_signed_in?
+  = link_to 'Log in', new_user_session_path
+
+- if user_signed_in?
+  = link_to 'Log out', destroy_user_session_path, method: :delete
