added bootstrap js, added bootstrap overrides styles, began work on home page

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,5 +12,8 @@
  *
  *= require 'bootstrap'
  *= require 'bootstrap_overrides'
+ *= require 'layouts'
+ *= require 'modules'
+ *= require 'base'
  *= require_self
  */
