--- a/app/views/shared/_nav.haml
+++ b/app/views/shared/_nav.haml
@@ -13,7 +13,7 @@
             Restaurants
             %span.caret
           %ul.dropdown-menu
-            %li= link_to 'Add New', root_path
+            %li= link_to 'Add New', new_restaurant_path
 
         - unless user_signed_in?
           %li= link_to 'Log in', new_user_session_path
