added faker for seeds, added destroy method and correlating specs for restaurants, added recent scope for restaurants, added nav to every page in application.haml, updated nav, added timestamps to restaurants, updated controller specs with new resources, added now_time test helper

--- a/app/views/dashboard/index.haml
+++ b/app/views/dashboard/index.haml
@@ -1,4 +1,3 @@
-= render 'shared/nav'
 .container-fluid
   .row
     .col-sm-3.col-md-2.sidebar
@@ -7,7 +6,7 @@
         %li= link_to 'Mine', root_path
         %li= link_to 'Nearby', root_path
 
-    .col-sm-9.col-sm-offset-3.col-md-10.col-md-offset-2.main.l-margin-top-nav-height
+    .col-sm-9.col-sm-offset-3.col-md-10.col-md-offset-2.main
       %h1.page-header All Restaurants
       .row.placeholders
         .col-xs-6.col-sm-3.placeholder
