--- a/app/views/restaurants/index.haml
+++ b/app/views/restaurants/index.haml
@@ -1,1 +1,19 @@
-index
+.container-fluid
+  .row
+    .col-lrg-12.main
+      %h2.sub-header Your Restaurants
+      %table.table.table-striped
+        %thead
+          %tr
+            %th Name
+            %th Your Rating
+            %th Average Community Rating
+            %th Action
+        %tbody
+          - @restaurants.recent.each do |restaurant|
+            %tr
+              %td= restaurant.name
+              %td 3 of 5
+              %td 4 of 5
+              %td
+                = link_to 'delete', restaurant_path(restaurant), method: :delete
