--- a/app/views/shared/_nav.haml
+++ b/app/views/shared/_nav.haml
@@ -11,7 +11,7 @@
             Admin
             %span.caret
           %ul.dropdown-menu
-            %li= link_to 'edit your restaurants', restaurants_path
+            %li= link_to 'view/edit your restaurants', restaurants_path
             %li= link_to 'add new restaurant', new_restaurant_path
 
         - unless user_signed_in?
