--- a/app/views/restaurants/edit.haml
+++ b/app/views/restaurants/edit.haml
@@ -1,12 +1,12 @@
 .container-fluid
   .row
     .col-lg-6.col-lg-offset-3
-      %h3.page-header= 'New Restaurant'
+      %h3.page-header= 'Edit Restaurant'
 
       = form_for(@restaurant) do |f|
         = render 'shared/flash_errors'
         .form-group
-          = f.text_field :name, class: 'form-control', placeholder: 'name of restaurant'
+          = f.text_field :name, class: 'form-control', placeholder: @restaurant.name
           %span.input-group-btn
         .form-group
-          = f.submit 'Create Restaurant', class: 'btn btn-primary'
+          = f.submit 'Update Restaurant', class: 'btn btn-primary'
