--- a/app/views/restaurants/index.haml
+++ b/app/views/restaurants/index.haml
@@ -7,13 +7,13 @@
           %tr
             %th Name
             %th Your Rating
-            %th Community Rating
+            %th Community Average Rating
             %th Action
         %tbody
           - @restaurants.recent.each do |restaurant|
-            %tr
+            %tr{name: 'data-row'}
               %td= restaurant.name
-              %td 3 of 5
+              %td= restaurant.user_rating(current_user).try('value')
               %td 4 of 5
               %td
                 = link_to 'view', restaurant_path(restaurant)
