--- a/app/views/shared/_nav.haml
+++ b/app/views/shared/_nav.haml
@@ -6,13 +6,14 @@
 
     #navbar.navbar-collapse.collapse
       %ul.nav.navbar-nav.navbar-right
-        %li.dropdown
-          = link_to restaurants_path, 'data-toggle' => 'dropdown' do
-            Admin
-            %span.caret
-          %ul.dropdown-menu
-            %li= link_to 'view/edit your restaurants', restaurants_path
-            %li= link_to 'add new restaurant', new_restaurant_path
+        - if user_signed_in?
+          %li.dropdown
+            = link_to restaurants_path, 'data-toggle' => 'dropdown' do
+              Admin
+              %span.caret
+            %ul.dropdown-menu
+              %li= link_to 'view/edit restaurants', restaurants_path
+              %li= link_to 'add new restaurant', new_restaurant_path
 
         - unless user_signed_in?
           %li= link_to 'Log in', new_user_session_path
