added commons scss file, created new front end for admin section, updated show page, updated feature specs for restaurants, removed community rating for time being

--- a/app/views/restaurants/edit.haml
+++ b/app/views/restaurants/edit.haml
@@ -1,5 +1,6 @@
+= render 'admin/nav'
 .container-fluid
-  .row
+  .row.l-margin-top-nav-height
     .col-lg-6.col-lg-offset-3
       %h3.page-header= 'Edit Restaurant'
 
