--- a/app/views/shared/_nav.haml
+++ b/app/views/shared/_nav.haml
@@ -1,21 +1,15 @@
 %nav.navbar.navbar-inverse.navbar-fixed-top
-  .container-fluid
-    .navbar-header
-      = render 'shared/hamburger'
-      = link_to 'What\'s For Lunch?', root_path, class: 'navbar-brand'
+  .container
+    .row
+      .col-lg-12
+        .navbar-header
+          = render 'shared/hamburger'
+          = link_to 'What\'s For Lunch?', root_path, class: 'navbar-brand'
 
-    #navbar.navbar-collapse.collapse
-      %ul.nav.navbar-nav.navbar-right
-        - if user_signed_in?
-          %li.dropdown
-            = link_to restaurants_path, 'data-toggle' => 'dropdown' do
-              Admin
-              %span.caret
-            %ul.dropdown-menu
-              %li= link_to 'view/edit restaurants', restaurants_path
-              %li= link_to 'add new restaurant', new_restaurant_path
-
-        - unless user_signed_in?
-          %li= link_to 'Log in', new_user_session_path
-        - if user_signed_in?
-          %li= link_to 'Log out', destroy_user_session_path, method: :delete
+        #navbar.navbar-collapse.collapse
+          %ul.nav.navbar-nav.navbar-right
+            - if user_signed_in?
+              %li= link_to 'Admin', restaurants_path
+              %li= link_to 'Log out', destroy_user_session_path, method: :delete
+            - unless user_signed_in?
+              %li= link_to 'Log in', new_user_session_path
