removed bootstrap js, shifted flash messages around in a partial where needed

--- a/app/views/restaurants/index.haml
+++ b/app/views/restaurants/index.haml
@@ -2,6 +2,7 @@
 .container
   .row.l-margin-top-nav-height
     .col-lg-12
+      = render 'shared/flash_messages'
       %h2.sub-header Your Restaurants
       %table.table.table-striped
         %thead
