updated restaurants controller to have ratings, updated corresponding specs. added available values to rating and value in words method, added ratings to new form, default rating to 0

--- a/app/views/restaurants/new.haml
+++ b/app/views/restaurants/new.haml
@@ -11,4 +11,8 @@
           = f.text_field :name, class: 'form-control', placeholder: 'name of restaurant'
           %span.input-group-btn
         .form-group
+          = label_tag :rating, 'Rating'
+          = select(:rating, :value, Rating.available_values, selected: '0')
+          = hidden_field :rating, :user_id, value: current_user.id
+        .form-group
           = f.submit 'Create Restaurant', class: 'btn btn-primary'
