--- a/app/views/restaurants/index.haml
+++ b/app/views/restaurants/index.haml
@@ -14,7 +14,7 @@
           - @restaurants.recent.each do |restaurant|
             %tr{name: 'data-row'}
               %td= restaurant.name
-              %td= restaurant.user_rating(current_user)
+              %td= restaurant.user_rating(current_user).value_in_words
               %td
                 = link_to 'view', restaurant_path(restaurant)
                 %span= '/'
