--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,11 +10,12 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require 'bootstrap'
- *= require 'bootstrap_overrides'
- *= require 'layouts'
- *= require 'modules'
- *= require 'base'
- *= require 'commons'
+ *= require bootstrap
+ *= require bootstrap_overrides
+ *= require layouts
+ *= require modules
+ *= require base
+ *= require commons
+ *= require bootstrap-datepicker
  *= require_self
  */
