added masonry and twitter bootstrap js back in, added dictate_css gem, increased navbar brand and created sub_nav bar, started making the cards on homepage

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,7 +15,7 @@
  *= require layouts
  *= require modules
  *= require base
- *= require commons
  *= require bootstrap-datepicker
+ *= require dictate_css/base
  *= require_self
  */
