--- a/app/assets/stylesheets/bootstrap_overrides.scss
+++ b/app/assets/stylesheets/bootstrap_overrides.scss
@@ -1,7 +1,13 @@
+@import 'variables';
+
 .authform {
   max-width: 500px;
   margin: auto;
 }
+.navbar-brand {
+  font-size: 22px;
+}
+
 
 
 .sub-header {
