--- a/app/views/restaurants/edit.haml
+++ b/app/views/restaurants/edit.haml
@@ -14,4 +14,8 @@
           = select(:rating, :value, Rating.available_values, selected: @restaurant.user_rating(current_user).value)
           = hidden_field :rating, :user_id, value: current_user.id
         .form-group
+          = label_tag :visit, 'Your last visit'
+          = text_field :visit, :time, 'data-provide' => 'datepicker', value: @restaurant.user_visit(current_user).time
+          = hidden_field :visit, :user_id, value: current_user.id
+        .form-group
           = f.submit 'Update Restaurant', class: 'btn btn-primary'
