--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -6,7 +6,7 @@
     = javascript_include_tag 'application'
     = csrf_meta_tags
     %meta{name: 'viewport', content: 'width=device-width, initial-scale=1'}
-  %body
+  %body{class: @body_color_class}
     = render 'shared/nav'
-    .l-margin-top-nav-height
+    .l-margin-top-nav-height.l-height-minus-navs.width-100
       = yield
