--- a/app/views/shared/_sub_nav.haml
+++ b/app/views/shared/_sub_nav.haml
@@ -2,27 +2,25 @@
   .container.l-medium-vertical-padding
     .row
       .col-lg-12
-        .btn-group{"aria-label" => "....", :role => "group"}
+        .btn-group{'aria-label' => '...', :role => 'group'}
           %button.btn.btn-primary
             Recommended
-          %button.btn.btn-default
-            Explore
           .btn-group
-            %button.btn.btn-default.dropdown-toggle{"aria-expanded" => "false", "aria-haspopup" => "true", "data-toggle" => "dropdown", :type => "button"}
+            %button.btn.btn-default.dropdown-toggle{'aria-expanded' => 'false', 'aria-haspopup' => 'true', 'data-toggle' => 'dropdown', :type => 'button'}
               Sort
               %span.caret
             %ul.dropdown-menu
               %li
-                %a{:href => "#"} Dropdown link
+                %a{:href => '#'} Dropdown link
               %li
-                %a{:href => "#"} Dropdown link
+                %a{:href => '#'} Dropdown link
 
           .btn-group
-            %button.btn.btn-default.dropdown-toggle{"aria-expanded" => "false", "aria-haspopup" => "true", "data-toggle" => "dropdown", :type => "button"}
+            %button.btn.btn-default.dropdown-toggle{'aria-expanded' => 'false', 'aria-haspopup' => 'true', 'data-toggle' => 'dropdown', :type => 'button'}
               Filter
               %span.caret
             %ul.dropdown-menu
               %li
-                %a{:href => "#"} Dropdown link
+                %a{:href => '#'} Dropdown link
               %li
-                %a{:href => "#"} Dropdown link
+                %a{:href => '#'} Dropdown link
