--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -8,5 +8,5 @@
     %meta{name: 'viewport', content: 'width=device-width, initial-scale=1'}
   %body{class: @body_color_class}
     = render 'shared/nav'
-    .l-margin-top-nav-height.l-height-minus-navs.width-100
+    .l-margin-top-nav-height.width-100
       = yield
