--- a/app/views/restaurants/index.haml
+++ b/app/views/restaurants/index.haml
@@ -15,8 +15,8 @@
           - @restaurants.order_by_name.each do |restaurant|
             %tr{name: 'data-row'}
               %td= restaurant.name
-              - binding.pry if restaurant.user_rating(current_user).nil?
-              %td= restaurant.user_rating(current_user).value_in_words
+              - rating = restaurant.user_rating(current_user)
+              %td= rating.nil? ? 'unrated' : rating.value_in_words
               %td= restaurant.last_visited
               %td
                 = link_to 'view', restaurant_path(restaurant)
