--- a/app/assets/stylesheets/modules.scss
+++ b/app/assets/stylesheets/modules.scss
@@ -9,3 +9,9 @@
 .m-bg-white {
   background: white;
 }
+.m-border {
+  border-left: 4px solid $primary;
+}
+.m-color-primary {
+  color: $primary;
+}
