--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -11,6 +11,20 @@
               .l-square-parent
                 .l-sized-child
                   .l-card-padding.height-100.width-100
-                    .m-bg-white.height-100.width-100.l-inner-card-padding
-                      %h3= restaurant.name
-                      %p= value
+                    .m-bg-white.height-100.width-100.m-border.relative
+                      .absolute-vertical-center.text-center.width-100.border-box.l-inner-card-padding.l-z-index-5.l-medium-vertical-padding
+                        %h2= restaurant.name
+                        .rating
+                          - 5.times do
+                            %span.star.clickable
+
+                      .border-box.l-inner-card-padding.height-100.l-medium-vertical-padding
+                        .relative.height-100
+                          .days-ago.absolute.bottom
+                            .inline-block.days.m-color-primary= TimeFormatter.days_ago(restaurant.last_visited)
+                            .inline-block.prompt-container.relative
+                              .small-prompt last visit
+                              .medium-prompt.m-color-primary days ago
+
+                          .absolute.bottom.right
+                            .fa.fa-calendar.calendar-icon.clickable
