--- a/app/views/restaurants/index.haml
+++ b/app/views/restaurants/index.haml
@@ -3,7 +3,7 @@
   .row.l-margin-top-nav-height
     .col-lg-12
       = render 'shared/flash_messages'
-      %h2.sub-header Springbot Restaurants
+      %h2.sub-header Restaurants
       %table.table.table-striped
         %thead
           %tr
