--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -6,4 +6,4 @@
         %h3= 'Restaurants'
       .col-lg-12
         - @recommendations.each_with_index do |(value, restaurants), index|
-          = render 'shared/card', restaurants: restaurants, average_rating: Average.find(value, restaurants.count), index: index
+          = render 'shared/card', restaurants: restaurants, average_rating: Average.find(value, restaurants.count), recommendation_index: index
