--- a/app/views/shared/_sub_nav.haml
+++ b/app/views/shared/_sub_nav.haml
@@ -2,16 +2,14 @@
   .container.l-medium-vertical-padding
     .row
       .col-lg-12
-        .btn-group{'aria-label' => '..', :role => 'group'}
+        .btn-group
           %button.btn.btn-primary
             Recommended
-
           .btn-group
-            %button.btn.btn-default.dropdown-toggle{'aria-expanded' => 'false', 'aria-haspopup' => 'true', 'data-toggle' => 'dropdown', :type => 'button'}
-              Filter
+            %button.btn.btn-default.dropdown-toggle{'aria-expanded' => 'false', 'aria-haspopup' => 'true', 'data-toggle' => 'dropdown', type: 'button'}
+              Last Visited
               %span.caret
             %ul.dropdown-menu
-              - 5.times do |index|
+              - %w{1 3 5 10}.each do |num|
                 %li
-                  %a{href: '#'}
-                    = "#{index + 1} stars only"
+                  = link_to "at least #{num} days ago", root_path(day: num)
