--- a/app/views/restaurants/show.haml
+++ b/app/views/restaurants/show.haml
@@ -1,5 +1,5 @@
 = render 'admin/nav'
-.container-fluid
+.container
   .row.l-margin-top-nav-height
     .col-lg-12
       = render 'shared/flash_messages'
