--- a/app/views/restaurants/new.haml
+++ b/app/views/restaurants/new.haml
@@ -1,5 +1,5 @@
 = render 'admin/nav'
-.container-fluid
+.container
   .row.l-margin-top-nav-height
     .col-lg-6.col-lg-offset-3
       %h3.page-header= 'New Restaurant'
