--- a/app/views/shared/_sub_nav.haml
+++ b/app/views/shared/_sub_nav.haml
@@ -1,15 +1,15 @@
-.m-bg-white
+.m-bg-white{name: 'sub-nav'}
   .container.l-medium-vertical-padding
     .row
       .col-lg-12
         .btn-group
           %button.btn.btn-primary
-            Recommended
+            = link_to 'Recommended', root_path
           .btn-group
             %button.btn.btn-default.dropdown-toggle{'aria-expanded' => 'false', 'aria-haspopup' => 'true', 'data-toggle' => 'dropdown', type: 'button'}
               Last Visited
               %span.caret
             %ul.dropdown-menu
-              - %w{1 3 5 10}.each do |num|
+              - %w{3 5 10}.each do |num|
                 %li
                   = link_to "at least #{num} days ago", root_path(day: num)
