moved card clicks js to asset precompile for including only if logged in home index, added a plus card to home page cards, removed star_ratings service class and made it a helper and expanded it more with specs, cleaned up ratings partial

--- a/app/assets/stylesheets/cards.scss
+++ b/app/assets/stylesheets/cards.scss
@@ -51,6 +51,14 @@
 .card-icon {
   font-size: 24px;
 }
+.plus-card {
+  font-size: 40px;
+  &:hover {
+    .m-bg-primary {
+      background: #3071a9;
+    }
+  }
+}
 .calendar-icon:hover {
   color: $info;
 }
