--- a/app/views/restaurants/edit.haml
+++ b/app/views/restaurants/edit.haml
@@ -2,7 +2,7 @@
 .container-fluid
   .row.l-margin-top-nav-height
     .col-lg-6.col-lg-offset-3
-      %h3.page-header= 'Edit Restaurant'
+      %h3.page-header Edit Restaurant
 
       = form_for(@restaurant) do |f|
         = render 'shared/flash_errors'
