--- a/app/views/shared/_hamburger.haml
+++ b/app/views/shared/_hamburger.haml
@@ -1,4 +1,4 @@
-%button.navbar-toggle.collapsed{'aria-controls' => 'navbar', 'aria-expanded' => 'false', 'data-target' => '#navbar', 'data-toggle' => 'collapse', :type => 'button'}
+%button.navbar-toggle.collapsed{'aria-controls' => 'navbar', 'aria-expanded' => 'false', 'data-target' => '#navbar', 'data-toggle' => 'collapse', type: 'button'}
   %span.sr-only Toggle navigation
   %span.icon-bar
   %span.icon-bar
