--- a/app/views/restaurants/show.haml
+++ b/app/views/restaurants/show.haml
@@ -12,7 +12,8 @@
             %th Last Visit
         %tbody
           %tr{name: 'data-row'}
-            %td= @restaurant.user_rating(current_user).value_in_words
+            - rating = @restaurant.user_rating(current_user)
+            %td= rating.nil? ? 'unrated' : rating.value_in_words
             %td= @restaurant.last_visited
 
       = link_to edit_restaurant_path(@restaurant) do
